--- a/style/header.scss
+++ b/style/header.scss
@@ -69,3 +69,7 @@
 body.scrolled.home .site-logo img {
   height: 26px; /* default P4 value */
 }
+
+.nav-search-toggle {
+  --top-navigation--search-toggle--background: var(--grey-800);
+}
